# mit-badge-image-generation

./: .env.example  .gitignore  API_DOCUMENTATION.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  gradio_main.py  requirements.txt
.github/workflows/: deploy-to-ecs.yml
app/: __init__.py  config.py  json_editor.py  logging_config.py  main.py  middleware.py  settings.py
app/controllers/: __init__.py  badge_image.py  health.py
app/core/: __init__.py  composer.py  logging_config.py  middleware.py
app/models/: __init__.py  requests.py  responses.py
app/services/: badge_service.py  config_generator.py
client/: package-lock.json  package.json
client-next/: README.md  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
client-next/app/: globals.css  layout.js  layout.tsx  page.js  page.tsx
client-next/components/: BadgeEditor.css  BadgeEditor.js  BadgeEditor.tsx  DynamicForm.js  DynamicForm.tsx  LayerEditor.js  LayerEditor.tsx
client-next/lib/: api.js  api.ts
client/public/: index.html
client/src/: App.css  App.js
docs/: FUNCTION_DOCUMENTATION.md
image-generation/: FUNCTION_DOCUMENTATION.md  README.md  pyproject.toml  start_api.py
image-generation/src/: api_server.py  composer.py  config.py  test_badge.py
image-generation/src/interfaces/: __init__.py  json_editor.py
image-generation/src/layers/: background.py  shape.py  text.py
scripts/: start.bat  start.sh
services/image-generation/: requirements.txt
services/server/: README.md  app.js  package-lock.json  package.json  server.js
(+35 files in other folders)
