[project]
name = "badge-generator"
version = "1.0.0"
description = "Badge generation API with FastAPI"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.7",
    "uvicorn>=0.34.2",
    "pillow>=11.2.1",
    "python-multipart>=0.0.20",
    "anyio>=4.8.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]